BUG#21132 (Slave fails to reconnect on update_slave_list)

This is a one liner which will fix semantics if SHOW SLAVE HOSTS to 
display the list of slaves currently registered on the host on which
it was issued.


sql/slave.cc:
  Remove call to update_slave_list() which was executing "SHOW SLAVE
  HOSTS" on master and populating slave_list based on the output.